<resources>
    <string name="app_name">Perfil Investidor</string>
    <string name="sobre">Sobre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questaoUm">1. Por quanto tempo você pretende\ndeixar seu dinheiro investido?</string>
    <string name="questaoUmA">Menos de 6 meses.</string>
    <string name="questaoUmB">Entre 6 meses e 1 ano.</string>
    <string name="questaoUmC">Entre 1 ano e 3 meses.</string>
    <string name="questaoUmD">Acima de 3 anos.</string>
    <string name="proxima">Próxima</string>
    <string name="questaoDois">2. Qual o objetivo desse investimento?</string>
    <string name="questaoDoisA">Preservação do capital para não perder valor ao\nlongo do tempo, assumindo baixos riscos de\nperdas.</string>
    <string name="questaoDoisB">Aumento gradual do capital ao longo do tempo,\nassumindo riscos moderados.</string>
    <string name="questaoDoisC">Aumento do capital acima da taxa de retorno\nmédia do mercado, mesmo que isso implique\nassumir riscos de perdas elevadas.</string>
    <string name="questaoDoisD">Obter no curto prazo retornos elevados e\nsignificativamente acima da taxa de retorno média\ndo mercado, assumindo riscos elevados.</string>
    <string name="questaoTres">3. Qual das alternativas melhor classifica\nsua formação e experiência com o\nmercado financeiro?</string>
    <string name="questaoTresA">Não possuo formação acadêmica ou\nconhecimento do mercado financeiro.</string>
    <string name="questaoTresB">Possuo formação acadêmica na área financeira,\nmas não tenho experiência com o mercado\nfinanceiro.</string>
    <string name="questaoTresC">Possuo formação acadêmica em outra área, mas\npossuo conhecimento do mercado financeiro.</string>
    <string name="questaoTresD">Possuo formação acadêmica na área financeira ou\npleno conhecimento do mercado financeiro.</string>
    <string name="questaoQuatro">4. Considerando seus rendimentos\nregulares, qual a porcentagem você\npretende reservar para aplicações\nfinanceiras?</string>
    <string name="questaoQuatroA">No máximo 25%.</string>
    <string name="questaoQuatroB">Entre 25,01 e 50%.</string>
    <string name="questaoQuatroC">Acima de 50%.</string>
    <string name="questaoCinco">5. Caso as suas aplicações sofressem\numa queda superior a 30%, o que você\nfaria?</string>
    <string name="questaoCincoA">Resgataria toda a aplicação e aplicaria na\npoupança.</string>
    <string name="questaoCincoB">Manteria aplicação aguardando uma melhora do\nmercado.</string>
    <string name="questaoCincoC">Aumentaria a aplicação para aproveitar as\noportunidades do mercado.</string>
    <string name="questaoSeis">6. Como está distribuído o seu\npatrimônio?</string>
    <string name="questaoSeisA">Meu patrimônio não está aplicado ou está todo\naplicado em renda fixa e/ou imóveis.</string>
    <string name="questaoSeisB">Menos de 25% em renda variável e o restante em\nrenda fixa e/ou imóveis.</string>
    <string name="questaoSeisC">Entre 25,01 e 50% aplicado em renda variável e o\nrestante em renda fixa e/ou imóveis.</string>
    <string name="questaoSeisD">Acima de 50% em renda variável.</string>
    <string name="questaoSete">7. Em relação as aplicações e\nrendimentos, em qual dessas situações\nvocê se enquadra?</string>
    <string name="questaoSeteA">Conto com o rendimento dessas aplicações para\ncomplementar minha renda mensal.</string>
    <string name="questaoSeteB">Eventualmente posso resgatar parte das\naplicações para fazer frente aos meus gastos.\nContudo, não tenho intenção de resgatar no curto\nprazo e pretendo fazer aplicações regulares.</string>
    <string name="questaoSeteC">Não tenho intenção de resgatar no curto prazo,\nmas não pretendo realizar novas aplicações.</string>
    <string name="questaoSeteD">Não tenho intenção de resgatar no curto prazo e\nainda pretendo fazer aplicações regulares.</string>
    <string name="questaoOito">8. Qual sua faixa de renda mensal\nmédia?</string>
    <string name="questaoOitoA">Até R$ 1.000.</string>
    <string name="questaoOitoB">De R$ 1.001 até R$ 5.000.</string>
    <string name="questaoOitoC">De R$ 5.001 até R$ 10.000.</string>
    <string name="QuestaoOitoD">Acima de R$ 10.000.</string>
    <string name="questaoNove">9. Qual o valor aproximado do seu\npatrimônio?</string>
    <string name="questaoNoveA">Até R$ 10.000.</string>
    <string name="questaoNoveB">De R$ 10.001 até R$ 100.000.</string>
    <string name="questaoNoveC">De R$ 100.001 até R$ 500.000.</string>
    <string name="questaoNoveD">De R$ 500.001 até R$ 1.000.000.</string>
    <string name="questaoNoveE">Acima de R$ 1.000.001.</string>
    <string name="nome">Nome</string>
    <string name="perfil">Perfil</string>
    <string name="textoSobre">Este aplicativo fornece ao usuário o seu perfil de investidor baseado na metodologia adaptada do questionário do Banco Paulista.</string>
    <string name="enderecoQuestionario">https://www.bancopaulista.com.br/Arquivos/QuestionarioAPI.pdf</string>
    <string name="nome_">Nome:</string>
    <string name="perfil_">Perfil:</string>
    <string name="titutlo_analisador">Analisador de Perfil de\nInvestidor</string>
    <string name="iniciar_analise">Iniciar Análise</string>
    <string name="informe_seu_nome">Informe seu nome</string>
    <string name="resultado">Resultado</string>
    <string name="investidor">Investidor:</string>
    <string name="nome_sobrenome">Nome Sobrenome</string>
    <string name="moderado">Moderado</string>
    <string name="refazer_analise">Refazer Análise</string>
    <string name="questao_um">Questão 1</string>
    <string name="questao_dois">Questão 2</string>
    <string name="questao_tres">Questão 3</string>
    <string name="questao_quatro">Questão 4</string>
    <string name="questao_cinco">Questão 5</string>
    <string name="questao_seis">Questão 6</string>
    <string name="questao_sete">Questão 7</string>
    <string name="questao_oito">Questão 8</string>
    <string name="questao_nove">Questão 9</string>
</resources>